force-app/main/default/objects/CFS_PO_File__c/CFS_PO_File__c.object-meta.xml
<CustomObject>
    <label>CFS PO File</label>
    <nameField>
        <label>CFS PO File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFS PO Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>