force-app/main/default/objects/CFS_PO_File__c/fields/Case_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_End_Date__c</fullName>
    <label>Case End Date</label>
    <type>Date</type>
</CustomField>