force-app/main/default/objects/CFS_PO_File__c/fields/File_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Status__c</fullName>
    <label>File Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>