force-app/main/default/objects/CFS_PO_File__c/fields/Requested_By_CFS__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_CFS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested By CFS</label>
    <type>Checkbox</type>
</CustomField>